fetching data from external api

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styel.css">
     <script defer src="./index.js"></script>
     <title>Movies</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Movies webpage</h1>
+    </header>
+    <main>
+    </main>
 </body>
 </html>
